force-app/main/default/objects/Alternate_Email__c/Alternate_Email__c.object-meta.xml
<CustomObject>
    <label>Alternate Email</label>
    <nameField>
        <displayFormat>AE-{000}</displayFormat>
        <label>Alternate Email ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alternate Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>