force-app/main/default/objects/Alternate_Email__c/fields/Alternate_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email_Address__c</fullName>
    <externalId>true</externalId>
    <label>Alternate Email Address</label>
    <type>Email</type>
</CustomField>