force-app/main/default/objects/Alternate_Email__c/fields/Bugzilla__c.field-meta.xml
<CustomField>
    <fullName>Bugzilla__c</fullName>
    <label>Bugzilla</label>
    <length>25</length>
    <type>Text</type>
</CustomField>