force-app/main/default/objects/Alternate_Email__c/fields/Confluence__c.field-meta.xml
<CustomField>
    <fullName>Confluence__c</fullName>
    <label>Confluence</label>
    <length>25</length>
    <type>Text</type>
</CustomField>