force-app/main/default/objects/Alternate_Email__c/fields/Contact_Email_diff_than_Primary__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_diff_than_Primary__c</fullName>
    <formula>IF(AND(Primary_Email__c, Alternate_Email_Address__c &lt;&gt; Contact_Name__r.Email),True,False)</formula>
    <label>Contact - Email Diff than Primary</label>
    <type>Checkbox</type>
</CustomField>