force-app/main/default/objects/Alternate_Email__c/fields/Date_Verified__c.field-meta.xml
<CustomField>
    <fullName>Date_Verified__c</fullName>
    <label>Date Verified</label>
    <type>DateTime</type>
</CustomField>