force-app/main/default/objects/Alternate_Email__c/fields/During_Merge_change__c.field-meta.xml
<CustomField>
    <fullName>During_Merge_change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>During Merge change</label>
    <type>Checkbox</type>
</CustomField>