force-app/main/default/objects/Alternate_Email__c/fields/Email_Address_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_Domain__c</fullName>
    <formula>SUBSTITUTE(Alternate_Email_Address__c, LEFT(Alternate_Email_Address__c, FIND(&quot;@&quot;, Alternate_Email_Address__c)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Address Domain</label>
    <type>Text</type>
</CustomField>