force-app/main/default/objects/Alternate_Email__c/fields/Email_Validation_Error__c.field-meta.xml
<CustomField>
    <fullName>Email_Validation_Error__c</fullName>
    <label>Email Validation Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>