force-app/main/default/objects/Alternate_Email__c/fields/Gerrit__c.field-meta.xml
<CustomField>
    <fullName>Gerrit__c</fullName>
    <label>Gerrit</label>
    <length>25</length>
    <type>Text</type>
</CustomField>