force-app/main/default/objects/Alternate_Email__c/fields/Git__c.field-meta.xml
<CustomField>
    <fullName>Git__c</fullName>
    <label>Git</label>
    <length>25</length>
    <type>Text</type>
</CustomField>