force-app/main/default/objects/Alternate_Email__c/fields/Github__c.field-meta.xml
<CustomField>
    <fullName>Github__c</fullName>
    <label>Github</label>
    <length>25</length>
    <type>Text</type>
</CustomField>