force-app/main/default/objects/Alternate_Email__c/fields/Heroku_connect_id__c.field-meta.xml
<CustomField>
    <fullName>Heroku_connect_id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Heroku_connect_id</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>