force-app/main/default/objects/Alternate_Email__c/fields/Jenkins__c.field-meta.xml
<CustomField>
    <fullName>Jenkins__c</fullName>
    <label>Jenkins</label>
    <length>25</length>
    <type>Text</type>
</CustomField>