force-app/main/default/objects/Alternate_Email__c/fields/Jira__c.field-meta.xml
<CustomField>
    <fullName>Jira__c</fullName>
    <label>Jira</label>
    <length>25</length>
    <type>Text</type>
</CustomField>