force-app/main/default/objects/Alternate_Email__c/fields/Last_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Last_Form_Submitted__c</fullName>
    <label>Last Form Submitted</label>
    <length>250</length>
    <type>Text</type>
</CustomField>