force-app/main/default/objects/Alternate_Email__c/fields/Lead_Email_Diff_than_Primary__c.field-meta.xml
<CustomField>
    <fullName>Lead_Email_Diff_than_Primary__c</fullName>
    <formula>IF(AND(Primary_Email__c, Alternate_Email_Address__c &lt;&gt; Lead_Name__r.Email),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead - Email Diff than Primary</label>
    <type>Checkbox</type>
</CustomField>