force-app/main/default/objects/Alternate_Email__c/fields/MCEmailID__c.field-meta.xml
<CustomField>
    <fullName>MCEmailID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MCEmailID</label>
    <type>Text</type>
</CustomField>