force-app/main/default/objects/Alternate_Email__c/fields/Pipermail__c.field-meta.xml
<CustomField>
    <fullName>Pipermail__c</fullName>
    <label>Pipermail</label>
    <length>25</length>
    <type>Text</type>
</CustomField>