force-app/main/default/objects/Alternate_Email__c/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Email</label>
    <type>Checkbox</type>
</CustomField>