force-app/main/default/objects/Alternate_Email__c/fields/Primary_System__c.field-meta.xml
<CustomField>
    <fullName>Primary_System__c</fullName>
    <label>Primary System</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Groups.io</fullName>
            </value>
            <value>
                <fullName>Edx</fullName>
            </value>
            <value>
                <fullName>Sugar CRM</fullName>
            </value>
            <value>
                <fullName>TI</fullName>
            </value>
            <value>
                <fullName>Drupal</fullName>
            </value>
            <value>
                <fullName>Cvent</fullName>
            </value>
            <value>
                <fullName>QuickStart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>