force-app/main/default/objects/Alternate_Email__c/fields/Slack__c.field-meta.xml
<CustomField>
    <fullName>Slack__c</fullName>
    <label>Slack</label>
    <length>25</length>
    <type>Text</type>
</CustomField>