force-app/main/default/objects/Alternate_Email__c/fields/zoom__c.field-meta.xml
<CustomField>
    <fullName>zoom__c</fullName>
    <label>zoom</label>
    <length>25</length>
    <type>Text</type>
</CustomField>