force-app/main/default/objects/Alternate_Email__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Alternate_Email_Address__c</columns>
    <columns>Primary_Email__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Lead_Name__c</columns>
    <columns>Email_Opt_Out__c</columns>
    <columns>Active__c</columns>
    <columns>Email_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>